# mailgoat-python

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: release_check.sh
src/mailgoat/: __init__.py  batch.py  cli.py  client.py  models.py  profiles.py  templates.py
tests/: conftest.py
tests/integration/: test_postal_integration.py
tests/unit/: test_batch.py  test_cli.py  test_client.py  test_profiles.py  test_templates.py
